Remove 'screen only' in media queries to hopefully resolve issues on smaller web browsers

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
 /*Mobile View*/
 
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5)
-only screen and (max-width: 959px){
+@media (max-width: 959px){
   body {
     margin: 0 auto;
     font-size: 1.25em;
